chore(release): prepare v0.4.0